# praxiaoneDEV

./: README.md
Abhishek/ai_cost_controller/: README.md  build_ai_cost_controller.sh  pyproject.toml  requirements.txt  setup.py
GraphRag_Team_Omkar/: .gitignore  Dockerfile  README-Docker.md  README.md  bayesian_network.py  config.py  deploy_praxia5.bat  deploy_praxia5.sh  diagnosis_engine.py  docker-compose.yml  embedding.py  graph_builder.py  graph_rag.py  index.html  ingest_diabetes_dataset.py  instructions.txt  llm_extractor.py  main.py  ner_extractor.py  ontology.py  pdf_ingestion.py  query_router.py  requirements.txt  response.json  retriever.py  service.py  start_docker_server.bat  start_docker_server.sh  test_extraction.py  validator.py
Mansa/: README.md
Omkar/: README.md  build_ai_cost_controller.py  build_ai_cost_controller.sh  build_praxiaone.sh
ai_cost_controller/ai_cost_controller/: build_ai_cost_controller.sh  pyproject.toml  setup.py
anshumita/: README.md
anshumita/ai_agent_orchestrator/: README.md  build_package.bat  build_package.sh  setup.py
anshumita/ai_agent_orchestrator/ai_agent_orchestrator/: __init__.py  orchestrator.py
mansa/: README.md  build_llm_gateway.bat  build_llm_gateway.sh  gpt_output.txt
omkar/: build_ai_cost_controller.sh  gpt_output.txt
