[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_cost_controller"
version = "2.0.0"
description = "Enterprise AI orchestration, cost governance, hybrid routing and distributed control plane"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Your Name", email = "your@email.com" }
]

license = { text = "MIT" }

keywords = [
    "ai",
    "llm",
    "orchestration",
    "cost-control",
    "groq",
    "ollama",
    "enterprise",
    "saas",
    "observability"
]

dependencies = [
    # Core providers
    "groq>=0.11.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",

    # Database
    "sqlalchemy>=2.0.0,<3.0.0",

    # Billing
    "stripe>=8.0.0,<9.0.0",

    # Distributed infra
    "redis>=5.0.0,<6.0.0",
    "confluent-kafka>=2.3.0,<3.0.0",

    # Token estimation
    "tiktoken>=0.5.0,<1.0.0",

    # Validation
    "pydantic>=2.0.0,<3.0.0",

    # Observability
    "opentelemetry-api>=1.22.0,<2.0.0",
    "opentelemetry-sdk>=1.22.0,<2.0.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0"
]

observability = [
    "prometheus-client>=0.19.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0"
]

[project.urls]
Homepage = "https://github.com/yourusername/ai_cost_controller"
Documentation = "https://github.com/yourusername/ai_cost_controller/docs"
Source = "https://github.com/yourusername/ai_cost_controller"
Issues = "https://github.com/yourusername/ai_cost_controller/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_cost_controller*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ai_cost_controller = ["py.typed"]

[project.scripts]
ai-cost-controller = "ai_cost_controller.bootstrap:main"
