[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_cost_controller"
version = "0.1.0"
description = "Enterprise AI orchestration and cost governance platform"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
license = { text = "MIT" }

dependencies = [
    "groq>=0.11.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["ai_cost_controller"]
